# wellbore-stability-utils

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PROJECT_SUMMARY.md
examples/: basic_usage.py
src/wellbore_stability_utils/: __init__.py  envelope.py  failure.py  models.py  reporting.py  stress.py  units.py  weak_plane.py
tests/: test_mechanics.py  test_utils.py
