[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wellbore-stability-utils"
version = "0.2.0"
description = "Small utilities and baseline mechanics helpers for wellbore-stability analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "zerolong1109" }]
keywords = [
  "wellbore-stability",
  "collapse-pressure",
  "mogi-coulomb",
  "mohr-coulomb",
  "kirsch",
  "scientific-software"
]

[project.urls]
Repository = "https://github.com/zerolong1109/wellbore-stability-utils"

[tool.setuptools.packages.find]
where = ["src"]
